// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Output Formatting > GitHub Actions format escapes special characters in messages 1`] = `
"::error file=test/fixtures/test-file-with-errors.html.erb,line=3,col=3,title=html-img-require-alt • @herb-tools/linter@0.7.0::Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. [html-img-require-alt]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:3:3%0A%0A      1 │ <div>%0A      2 │   <SPAN>Test content</SPAN>%0A  →   3 │   <img src="test.jpg">%0A        │    ~~~%0A      4 │ </div>%0A      5 │%0A

::error file=test/fixtures/test-file-with-errors.html.erb,line=2,col=3,title=html-tag-name-lowercase • @herb-tools/linter@0.7.0::Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. [html-tag-name-lowercase]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:2:3%0A%0A      1 │ <div>%0A  →   2 │   <SPAN>Test content</SPAN>%0A        │    ~~~~%0A      3 │   <img src="test.jpg">%0A      4 │ </div>%0A

::error file=test/fixtures/test-file-with-errors.html.erb,line=2,col=22,title=html-tag-name-lowercase • @herb-tools/linter@0.7.0::Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. [html-tag-name-lowercase]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:2:22%0A%0A      1 │ <div>%0A  →   2 │   <SPAN>Test content</SPAN>%0A        │                       ~~~~%0A      3 │   <img src="test.jpg">%0A      4 │ </div>%0A

[error] Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)

test/fixtures/test-file-with-errors.html.erb:3:3

      1 │ <div>
      2 │   <SPAN>Test content</SPAN>
  →   3 │   <img src="test.jpg">
        │    ~~~
      4 │ </div>
      5 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/3] ⎯⎯⎯⎯

[error] Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-with-errors.html.erb:2:3

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │    ~~~~
      3 │   <img src="test.jpg">
      4 │ </div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [2/3] ⎯⎯⎯⎯

[error] Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-with-errors.html.erb:2:22

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │                       ~~~~
      3 │   <img src="test.jpg">
      4 │ </div>

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)
  html-img-require-alt (1 offense in 1 file)


 Summary:
  Checked      1 file
  Offenses     3 errors | 0 warnings (3 offenses across 1 file)"
`;

exports[`CLI Output Formatting > GitHub Actions format includes rule codes 1`] = `
"::error file=test/fixtures/no-trailing-newline.html.erb,line=1,col=29,title=erb-requires-trailing-newline • @herb-tools/linter@0.7.0::File must end with trailing newline [erb-requires-trailing-newline]%0A%0A%0Atest/fixtures/no-trailing-newline.html.erb:1:29%0A%0A  →   1 │ <div>No trailing newline</div>%0A        │                              ~%0A

[error] File must end with trailing newline (erb-requires-trailing-newline)

test/fixtures/no-trailing-newline.html.erb:1:29

  →   1 │ <div>No trailing newline</div>
        │                              ~

 Rule offenses:
  erb-requires-trailing-newline (1 offense in 1 file)


 Summary:
  Checked      1 file
  Offenses     1 error | 0 warnings (1 offense across 1 file)"
`;

exports[`CLI Output Formatting > displays most violated rules with multiple offenses 1`] = `
"[error] Add an \`href\` attribute to \`<a>\` to ensure it is focusable and accessible. (html-anchor-require-href)

test/fixtures/multiple-rule-offenses.html.erb:5:3

      3 │ <div id=test1 class='' data-value=bar>
      4 │   <img />
  →   5 │   <a class="" class="">Link 1</a>
        │    ~
      6 │ </div>
      7 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/14] ⎯⎯⎯⎯

[error] Add an \`href\` attribute to \`<a>\` to ensure it is focusable and accessible. (html-anchor-require-href)

test/fixtures/multiple-rule-offenses.html.erb:10:1

      8 │ <h1></h1>
      9 │ 
  →  10 │ <a><a>Nested</a></a>
        │  ~
     11 │ 
     12 │ <div id="duplicate"></div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [2/14] ⎯⎯⎯⎯

[error] Add an \`href\` attribute to \`<a>\` to ensure it is focusable and accessible. (html-anchor-require-href)

test/fixtures/multiple-rule-offenses.html.erb:10:4

      8 │ <h1></h1>
      9 │ 
  →  10 │ <a><a>Nested</a></a>
        │     ~
     11 │ 
     12 │ <div id="duplicate"></div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [3/14] ⎯⎯⎯⎯

[warning] Attribute \`class\` uses single quotes. Prefer double quotes for HTML attribute values: \`class=""\`. (html-attribute-double-quotes)

test/fixtures/multiple-rule-offenses.html.erb:3:20

      1 │ <!-- Multiple offenses of same rules to test "Most frequent rule offenses" display -->
      2 │ 
  →   3 │ <div id=test1 class='' data-value=bar>
        │                     ~~
      4 │   <img />
      5 │   <a class="" class="">Link 1</a>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [4/14] ⎯⎯⎯⎯

[error] Attribute value should be quoted: \`id="test1"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)

test/fixtures/multiple-rule-offenses.html.erb:3:8

      1 │ <!-- Multiple offenses of same rules to test "Most frequent rule offenses" display -->
      2 │ 
  →   3 │ <div id=test1 class='' data-value=bar>
        │         ~~~~~
      4 │   <img />
      5 │   <a class="" class="">Link 1</a>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [5/14] ⎯⎯⎯⎯

[error] Attribute value should be quoted: \`data-value="bar"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)

test/fixtures/multiple-rule-offenses.html.erb:3:34

      1 │ <!-- Multiple offenses of same rules to test "Most frequent rule offenses" display -->
      2 │ 
  →   3 │ <div id=test1 class='' data-value=bar>
        │                                   ~~~
      4 │   <img />
      5 │   <a class="" class="">Link 1</a>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [6/14] ⎯⎯⎯⎯

[error] Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)

test/fixtures/multiple-rule-offenses.html.erb:4:3

      2 │ 
      3 │ <div id=test1 class='' data-value=bar>
  →   4 │   <img />
        │    ~~~
      5 │   <a class="" class="">Link 1</a>
      6 │ </div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [7/14] ⎯⎯⎯⎯

[error] Duplicate attribute \`class\` found on tag. Remove the duplicate occurrence. (html-no-duplicate-attributes)

test/fixtures/multiple-rule-offenses.html.erb:5:14

      3 │ <div id=test1 class='' data-value=bar>
      4 │   <img />
  →   5 │   <a class="" class="">Link 1</a>
        │               ~~~~~
      6 │ </div>
      7 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [8/14] ⎯⎯⎯⎯

[warning] Attribute \`class\` must not be empty. Either provide a meaningful value or remove the attribute entirely. (html-no-empty-attributes)

test/fixtures/multiple-rule-offenses.html.erb:3:14

      1 │ <!-- Multiple offenses of same rules to test "Most frequent rule offenses" display -->
      2 │ 
  →   3 │ <div id=test1 class='' data-value=bar>
        │               ~~~~~
      4 │   <img />
      5 │   <a class="" class="">Link 1</a>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [9/14] ⎯⎯⎯⎯

[warning] Attribute \`class\` must not be empty. Either provide a meaningful value or remove the attribute entirely. (html-no-empty-attributes)

test/fixtures/multiple-rule-offenses.html.erb:5:5

      3 │ <div id=test1 class='' data-value=bar>
      4 │   <img />
  →   5 │   <a class="" class="">Link 1</a>
        │      ~~~~~
      6 │ </div>
      7 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [10/14] ⎯⎯⎯⎯

[warning] Attribute \`class\` must not be empty. Either provide a meaningful value or remove the attribute entirely. (html-no-empty-attributes)

test/fixtures/multiple-rule-offenses.html.erb:5:14

      3 │ <div id=test1 class='' data-value=bar>
      4 │   <img />
  →   5 │   <a class="" class="">Link 1</a>
        │               ~~~~~
      6 │ </div>
      7 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [11/14] ⎯⎯⎯⎯

[error] Heading element \`<h1>\` must not be empty. Provide accessible text content for screen readers and SEO. (html-no-empty-headings)

test/fixtures/multiple-rule-offenses.html.erb:8:0

      6 │ </div>
      7 │ 
  →   8 │ <h1></h1>
        │ ~~~~~~~~~
      9 │ 
     10 │ <a><a>Nested</a></a>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [12/14] ⎯⎯⎯⎯

[error] Nested \`<a>\` elements are not allowed. Links cannot contain other links. (html-no-nested-links)

test/fixtures/multiple-rule-offenses.html.erb:10:4

      8 │ <h1></h1>
      9 │ 
  →  10 │ <a><a>Nested</a></a>
        │     ~
     11 │ 
     12 │ <div id="duplicate"></div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [13/14] ⎯⎯⎯⎯

[error] Use \`<img>\` instead of self-closing \`<img />\` for HTML compatibility. (html-no-self-closing)

test/fixtures/multiple-rule-offenses.html.erb:4:2

      2 │ 
      3 │ <div id=test1 class='' data-value=bar>
  →   4 │   <img />
        │   ~~~~~~~
      5 │   <a class="" class="">Link 1</a>
      6 │ </div>

 Most frequent rule offenses:
  html-anchor-require-href (3 offenses in 1 file)
  html-no-empty-attributes (3 offenses in 1 file)
  html-attribute-values-require-quotes (2 offenses in 1 file)
  html-attribute-double-quotes (1 offense in 1 file)
  html-img-require-alt (1 offense in 1 file)

  ...and 4 more rules with 4 offenses


 Summary:
  Checked      1 file
  Offenses     10 errors | 4 warnings (14 offenses across 1 file)"
`;

exports[`CLI Output Formatting > displays rule offenses when showing all rules 1`] = `
"[error] Attribute value should be quoted: \`id="test"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)

test/fixtures/few-rule-offenses.html.erb:2:8

      1 │ <!-- Just a few different rule offenses to test "Rule offenses:" vs "Most frequent rule offenses:" -->
  →   2 │ <div id=test class=foo>
        │         ~~~~
      3 │   <img src=image.jpg>
      4 │ </div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/7] ⎯⎯⎯⎯

[error] Attribute value should be quoted: \`class="foo"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)

test/fixtures/few-rule-offenses.html.erb:2:19

      1 │ <!-- Just a few different rule offenses to test "Rule offenses:" vs "Most frequent rule offenses:" -->
  →   2 │ <div id=test class=foo>
        │                    ~~~
      3 │   <img src=image.jpg>
      4 │ </div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [2/7] ⎯⎯⎯⎯

[error] Attribute value should be quoted: \`src="image"\`. Always wrap attribute values in quotes. (html-attribute-values-require-quotes)

test/fixtures/few-rule-offenses.html.erb:3:11

      1 │ <!-- Just a few different rule offenses to test "Rule offenses:" vs "Most frequent rule offenses:" -->
      2 │ <div id=test class=foo>
  →   3 │   <img src=image.jpg>
        │            ~~~~~
      4 │ </div>
      5 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [3/7] ⎯⎯⎯⎯

[error] Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)

test/fixtures/few-rule-offenses.html.erb:3:3

      1 │ <!-- Just a few different rule offenses to test "Rule offenses:" vs "Most frequent rule offenses:" -->
      2 │ <div id=test class=foo>
  →   3 │   <img src=image.jpg>
        │    ~~~
      4 │ </div>
      5 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [4/7] ⎯⎯⎯⎯

[error] Duplicate ID \`duplicate\` found. IDs must be unique within a document. (html-no-duplicate-ids)

test/fixtures/few-rule-offenses.html.erb:9:5

      7 │ 
      8 │ <div id="duplicate"></div>
  →   9 │ <div id="duplicate"></div>
        │      ~~~~~~~~~~~~~~
     10 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [5/7] ⎯⎯⎯⎯

[error] Heading element \`<h1>\` must not be empty. Provide accessible text content for screen readers and SEO. (html-no-empty-headings)

test/fixtures/few-rule-offenses.html.erb:6:0

      4 │ </div>
      5 │ 
  →   6 │ <h1></h1>
        │ ~~~~~~~~~
      7 │ 
      8 │ <div id="duplicate"></div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [6/7] ⎯⎯⎯⎯

[error] Unexpected Token. Expected: \`TOKEN_IDENTIFIER, TOKEN_AT, TOKEN_ERB_START,TOKEN_WHITESPACE, or TOKEN_NEWLINE\`, found: \`TOKEN_CHARACTER\`. (\`UNEXPECTED_ERROR\`) (parser-no-errors)

test/fixtures/few-rule-offenses.html.erb:3:16

      1 │ <!-- Just a few different rule offenses to test "Rule offenses:" vs "Most frequent rule offenses:" -->
      2 │ <div id=test class=foo>
  →   3 │   <img src=image.jpg>
        │                 ~
      4 │ </div>
      5 │

 Rule offenses:
  html-attribute-values-require-quotes (3 offenses in 1 file)
  html-img-require-alt (1 offense in 1 file)
  html-no-duplicate-ids (1 offense in 1 file)
  html-no-empty-headings (1 offense in 1 file)
  parser-no-errors (1 offense in 1 file)


 Summary:
  Checked      1 file
  Offenses     7 errors | 0 warnings (7 offenses across 1 file)"
`;

exports[`CLI Output Formatting > formats GitHub Actions output correctly for bad file 1`] = `
"::error file=test/fixtures/bad-file.html.erb,line=1,col=1,title=html-tag-name-lowercase • @herb-tools/linter@0.7.0::Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. [html-tag-name-lowercase]%0A%0A%0Atest/fixtures/bad-file.html.erb:1:1%0A%0A  →   1 │ <SPAN>Bad file</SPAN>%0A        │  ~~~~%0A      2 │%0A

::error file=test/fixtures/bad-file.html.erb,line=1,col=16,title=html-tag-name-lowercase • @herb-tools/linter@0.7.0::Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. [html-tag-name-lowercase]%0A%0A%0Atest/fixtures/bad-file.html.erb:1:16%0A%0A  →   1 │ <SPAN>Bad file</SPAN>%0A        │                 ~~~~%0A      2 │%0A

[error] Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)

test/fixtures/bad-file.html.erb:1:1

  →   1 │ <SPAN>Bad file</SPAN>
        │  ~~~~
      2 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/2] ⎯⎯⎯⎯

[error] Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

test/fixtures/bad-file.html.erb:1:16

  →   1 │ <SPAN>Bad file</SPAN>
        │                 ~~~~
      2 │

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)


 Summary:
  Checked      1 file
  Offenses     2 errors | 0 warnings (2 offenses across 1 file)"
`;

exports[`CLI Output Formatting > formats GitHub Actions output correctly for clean file 1`] = `
"✓ test/fixtures/clean-file.html.erb - No issues found


 Summary:
  Checked      1 file
  Offenses     0 offenses"
`;

exports[`CLI Output Formatting > formats GitHub Actions output correctly for file with errors 1`] = `
"::error file=test/fixtures/test-file-with-errors.html.erb,line=3,col=3,title=html-img-require-alt • @herb-tools/linter@0.7.0::Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. [html-img-require-alt]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:3:3%0A%0A      1 │ <div>%0A      2 │   <SPAN>Test content</SPAN>%0A  →   3 │   <img src="test.jpg">%0A        │    ~~~%0A      4 │ </div>%0A      5 │%0A

::error file=test/fixtures/test-file-with-errors.html.erb,line=2,col=3,title=html-tag-name-lowercase • @herb-tools/linter@0.7.0::Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. [html-tag-name-lowercase]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:2:3%0A%0A      1 │ <div>%0A  →   2 │   <SPAN>Test content</SPAN>%0A        │    ~~~~%0A      3 │   <img src="test.jpg">%0A      4 │ </div>%0A

::error file=test/fixtures/test-file-with-errors.html.erb,line=2,col=22,title=html-tag-name-lowercase • @herb-tools/linter@0.7.0::Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. [html-tag-name-lowercase]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:2:22%0A%0A      1 │ <div>%0A  →   2 │   <SPAN>Test content</SPAN>%0A        │                       ~~~~%0A      3 │   <img src="test.jpg">%0A      4 │ </div>%0A

[error] Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)

test/fixtures/test-file-with-errors.html.erb:3:3

      1 │ <div>
      2 │   <SPAN>Test content</SPAN>
  →   3 │   <img src="test.jpg">
        │    ~~~
      4 │ </div>
      5 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/3] ⎯⎯⎯⎯

[error] Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-with-errors.html.erb:2:3

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │    ~~~~
      3 │   <img src="test.jpg">
      4 │ </div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [2/3] ⎯⎯⎯⎯

[error] Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-with-errors.html.erb:2:22

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │                       ~~~~
      3 │   <img src="test.jpg">
      4 │ </div>

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)
  html-img-require-alt (1 offense in 1 file)


 Summary:
  Checked      1 file
  Offenses     3 errors | 0 warnings (3 offenses across 1 file)"
`;

exports[`CLI Output Formatting > formats GitHub Actions output with --format=github option 1`] = `
"[error] Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-simple.html.erb:2:3

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │    ~~~~
      3 │ </div>
      4 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/2] ⎯⎯⎯⎯

[error] Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-simple.html.erb:2:22

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │                       ~~~~
      3 │ </div>
      4 │

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)


 Summary:
  Checked      1 file
  Offenses     2 errors | 0 warnings (2 offenses across 1 file)"
`;

exports[`CLI Output Formatting > formats JSON output correctly for bad file 1`] = `
{
  "clean": false,
  "completed": true,
  "message": null,
  "offenses": [
    {
      "code": "html-tag-name-lowercase",
      "filename": "test/fixtures/bad-file.html.erb",
      "location": {
        "end": {
          "column": 5,
          "line": 1,
        },
        "start": {
          "column": 1,
          "line": 1,
        },
      },
      "message": "Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead.",
      "severity": "error",
      "source": "Herb Linter",
    },
    {
      "code": "html-tag-name-lowercase",
      "filename": "test/fixtures/bad-file.html.erb",
      "location": {
        "end": {
          "column": 20,
          "line": 1,
        },
        "start": {
          "column": 16,
          "line": 1,
        },
      },
      "message": "Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead.",
      "severity": "error",
      "source": "Herb Linter",
    },
  ],
  "summary": {
    "filesChecked": 1,
    "filesWithOffenses": 1,
    "ruleCount": 31,
    "totalErrors": 2,
    "totalOffenses": 2,
    "totalWarnings": 0,
  },
  "timing": null,
}
`;

exports[`CLI Output Formatting > formats JSON output correctly for clean file 1`] = `
{
  "clean": true,
  "completed": true,
  "message": null,
  "offenses": [],
  "summary": {
    "filesChecked": 1,
    "filesWithOffenses": 0,
    "ruleCount": 31,
    "totalErrors": 0,
    "totalOffenses": 0,
    "totalWarnings": 0,
  },
  "timing": null,
}
`;

exports[`CLI Output Formatting > formats JSON output correctly for file with errors 1`] = `
{
  "clean": false,
  "completed": true,
  "message": null,
  "offenses": [
    {
      "code": "html-img-require-alt",
      "filename": "test/fixtures/test-file-with-errors.html.erb",
      "location": {
        "end": {
          "column": 6,
          "line": 3,
        },
        "start": {
          "column": 3,
          "line": 3,
        },
      },
      "message": "Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images.",
      "severity": "error",
      "source": "Herb Linter",
    },
    {
      "code": "html-tag-name-lowercase",
      "filename": "test/fixtures/test-file-with-errors.html.erb",
      "location": {
        "end": {
          "column": 7,
          "line": 2,
        },
        "start": {
          "column": 3,
          "line": 2,
        },
      },
      "message": "Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead.",
      "severity": "error",
      "source": "Herb Linter",
    },
    {
      "code": "html-tag-name-lowercase",
      "filename": "test/fixtures/test-file-with-errors.html.erb",
      "location": {
        "end": {
          "column": 26,
          "line": 2,
        },
        "start": {
          "column": 22,
          "line": 2,
        },
      },
      "message": "Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead.",
      "severity": "error",
      "source": "Herb Linter",
    },
  ],
  "summary": {
    "filesChecked": 1,
    "filesWithOffenses": 1,
    "ruleCount": 31,
    "totalErrors": 3,
    "totalOffenses": 3,
    "totalWarnings": 0,
  },
  "timing": null,
}
`;

exports[`CLI Output Formatting > formats detailed error output correctly 1`] = `
"[error] Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)

test/fixtures/test-file-with-errors.html.erb:3:3

      1 │ <div>
      2 │   <SPAN>Test content</SPAN>
  →   3 │   <img src="test.jpg">
        │    ~~~
      4 │ </div>
      5 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/3] ⎯⎯⎯⎯

[error] Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-with-errors.html.erb:2:3

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │    ~~~~
      3 │   <img src="test.jpg">
      4 │ </div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [2/3] ⎯⎯⎯⎯

[error] Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-with-errors.html.erb:2:22

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │                       ~~~~
      3 │   <img src="test.jpg">
      4 │ </div>

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)
  html-img-require-alt (1 offense in 1 file)


 Summary:
  Checked      1 file
  Offenses     3 errors | 0 warnings (3 offenses across 1 file)"
`;

exports[`CLI Output Formatting > formats simple output correctly 1`] = `
"test/fixtures/test-file-simple.html.erb:
  2:3  ✗ Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)
  2:22 ✗ Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)


 Summary:
  Checked      1 file
  Offenses     2 errors | 0 warnings (2 offenses across 1 file)"
`;

exports[`CLI Output Formatting > formats simple output for bad-file correctly 1`] = `
"test/fixtures/bad-file.html.erb:
  1:1  ✗ Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)
  1:16 ✗ Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)


 Summary:
  Checked      1 file
  Offenses     2 errors | 0 warnings (2 offenses across 1 file)"
`;

exports[`CLI Output Formatting > formats success output correctly 1`] = `
"✓ test/fixtures/clean-file.html.erb - No issues found


 Summary:
  Checked      1 file
  Offenses     0 offenses"
`;

exports[`CLI Output Formatting > handles multiple errors correctly 1`] = `
"[error] Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)

test/fixtures/bad-file.html.erb:1:1

  →   1 │ <SPAN>Bad file</SPAN>
        │  ~~~~
      2 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/2] ⎯⎯⎯⎯

[error] Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

test/fixtures/bad-file.html.erb:1:16

  →   1 │ <SPAN>Bad file</SPAN>
        │                 ~~~~
      2 │

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)


 Summary:
  Checked      1 file
  Offenses     2 errors | 0 warnings (2 offenses across 1 file)"
`;

exports[`CLI Output Formatting > uses GitHub Actions format by default when GITHUB_ACTIONS is true 1`] = `
"::error file=test/fixtures/test-file-with-errors.html.erb,line=3,col=3,title=html-img-require-alt • @herb-tools/linter@0.7.0::Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. [html-img-require-alt]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:3:3%0A%0A      1 │ <div>%0A      2 │   <SPAN>Test content</SPAN>%0A  →   3 │   <img src="test.jpg">%0A        │    ~~~%0A      4 │ </div>%0A      5 │%0A

::error file=test/fixtures/test-file-with-errors.html.erb,line=2,col=3,title=html-tag-name-lowercase • @herb-tools/linter@0.7.0::Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. [html-tag-name-lowercase]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:2:3%0A%0A      1 │ <div>%0A  →   2 │   <SPAN>Test content</SPAN>%0A        │    ~~~~%0A      3 │   <img src="test.jpg">%0A      4 │ </div>%0A

::error file=test/fixtures/test-file-with-errors.html.erb,line=2,col=22,title=html-tag-name-lowercase • @herb-tools/linter@0.7.0::Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. [html-tag-name-lowercase]%0A%0A%0Atest/fixtures/test-file-with-errors.html.erb:2:22%0A%0A      1 │ <div>%0A  →   2 │   <SPAN>Test content</SPAN>%0A        │                       ~~~~%0A      3 │   <img src="test.jpg">%0A      4 │ </div>%0A

[error] Missing required \`alt\` attribute on \`<img>\` tag. Add \`alt=""\` for decorative images or \`alt="description"\` for informative images. (html-img-require-alt)

test/fixtures/test-file-with-errors.html.erb:3:3

      1 │ <div>
      2 │   <SPAN>Test content</SPAN>
  →   3 │   <img src="test.jpg">
        │    ~~~
      4 │ </div>
      5 │


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [1/3] ⎯⎯⎯⎯

[error] Opening tag name \`<SPAN>\` should be lowercase. Use \`<span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-with-errors.html.erb:2:3

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │    ~~~~
      3 │   <img src="test.jpg">
      4 │ </div>


⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯⎯  [2/3] ⎯⎯⎯⎯

[error] Closing tag name \`</SPAN>\` should be lowercase. Use \`</span>\` instead. (html-tag-name-lowercase)

test/fixtures/test-file-with-errors.html.erb:2:22

      1 │ <div>
  →   2 │   <SPAN>Test content</SPAN>
        │                       ~~~~
      3 │   <img src="test.jpg">
      4 │ </div>

 Rule offenses:
  html-tag-name-lowercase (2 offenses in 1 file)
  html-img-require-alt (1 offense in 1 file)


 Summary:
  Checked      1 file
  Offenses     3 errors | 0 warnings (3 offenses across 1 file)"
`;
